2012-12-06 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_*[C,h] : Allow STAT to be run on serial process w/ command line option
	* scripts/STATGUI.py : GUI support for serial process attaching
	* doc/src/stat_options.sgml : added serial attach option
	* src/*.C : check strdup calls for NULL return value

2012-11-02 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/* : updated documentation
	* src/STAT_*.[C,h], config/x_ac_graphlib.m4 : removed graphlib 1.X support
	* src/STAT_*.[C,h], config/x_ac_mrnet.m4 : removed MRNet 2.X support

2012-11-01 Gregory L. Lee <lee218@llnl.gov>
	* src/MRNetSymbolReader.h : extern FILE *statOutFp

2012-10-31 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_GraphRoutines.C : merge functions return void *
	* src/STAT_GraphRoutines.C : statNodeToText return strdup

2012-10-24 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT.h src/STAT_FrontEnd.C, src/STAT_BackEnd.C
	src/STAT_FilterDefinitions.C : define statOutFp in .C files

2012-10-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : use getpwuid() instead of getlogin()	

2012-10-18 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : fixed bug in thread stack traces
	* src/STAT_FrontEnd.C : fixed memory bug in receiveStackTraces
	* config/x_ac_debuglibs.m4 : added additional StackWalker version support

2012-08-20 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.[C,h], src/STAT_BackEnd.[C,h], scripts/STATGUI.py,
	doc/src/* configure.ac src/STAT.[i,C] : added prototype feature to 
	gather Python-level stack traces (--enable-python-debug)
	* src/MRNetSymbolReader.h, src/STAT_FrontEnd.[C,h],
	src/STAT_BackEnd.[C,h]: updated FastGlobalFileStat->FastGlobalFileStatus

2012-08-20 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/* : updated man pages and command references to lowercase
	versions
	* doc/src/stat_changelog.sgml : new documentation section to highlight
	changes

2012-08-10 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added menuitem to modify select preferences